# slash

backend/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/src/: api.py
backend/src/common/: exceptions.py
backend/src/core/: config.py  db.py
backend/src/slash/user/: models.py  routes.py  schemas.py  service.py
frontend/: .gitignore  package.json
frontend/pages/: auth-flow.tsx  auth.service.tsx  index.tsx  login.js  login.tsx
