[project]
name = "slash-backend"
version = "0.1.0"
description = "This is the backend for Slash, the cryptic hunt platform"
authors = [
    {name = "Mehul Arora",email = "mehul21066@iiitd.ac.in"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "motor[srv] (>=3.7.0,<4.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
isort = "^5.13.2"
black = "^24.10.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

